# WorldDownloader

./: .gitignore  CMakeLists.txt  README.md  main.cpp
extra/: MinecraftHandle.h
include/: mcpelauncher_api.h  statichook.h
scripts/: install.sh  uninstall.sh
